docs: change in swagger documentation
